# os-labs

./: .gitignore  main.cpp
lab1/: CMakeLists.txt  main.cpp  run.cmd  run.sh
lab2/: CMakeLists.txt  run.cmd  run.sh
lab2/2.krgen/: Makefile  krgen.c
lab2/include/: bg_runner.hpp
lab2/src/: bg_runner.cpp  main.cpp
lab2/tests/: test.cpp
lab3/: CMakeLists.txt  logs.txt  run.cmd  run.sh
lab3/examples/1.threads/: CMakeLists.txt  my_thread.hpp  test.cpp
lab3/examples/2.shared-mem/: CMakeLists.txt  my_shmem.hpp  test.cpp
lab3/include/: clonger.hpp  shared_mem.hpp
lab3/src/: clonger.cpp
lab4/: CMakeLists.txt  run.cmd  run.sh
lab4/example/: CMakeLists.txt  test.cpp
lab4/include/: my_serial.hpp  temper_logger.hpp
lab4/src/: emulator.cpp  temper_logger.cpp
lab5/: CMakeLists.txt  run.cmd  run.sh
lab5/2.tcp-example/: CMakeLists.txt  client.cpp  server.cpp
lab5/client/: app.py  index.html
lab5/include/: db.hpp  my_serial.hpp  server.hpp  temper_db_logger.hpp
lab5/src/: db.cpp  emulator.cpp  server.cpp  temper_logger.cpp
lab6/: CMakeLists.txt  main.cpp  run.cmd  run.sh
lab6/include/: statistics_gui.hpp
lab6/src/: main.cpp  server.cpp  statistics_gui.cpp  temper_logger.cpp
lab6_lin/: CMakeLists.txt  run.cmd  run.sh
lab6_lin/src/: CMakeLists.txt  main.cpp
lab6_win/: CMakeLists.txt  main.cpp  run.cmd
lab6_win/src/: charts_windows.cpp
